--- a/css/streets.css
+++ b/css/streets.css
@@ -1,10 +1,10 @@
 #svg-streets path {
   fill: none;
-  stroke: #CC0000;
+  stroke: rgba(204,0,0,1);
 }
 
 #svg-streets path:hover {
-  stroke: #000000;
+  stroke: rgba(0,0,0,1);
   cursor: pointer;
 }
 
