Added more tools

--- a/templates/street.ejs
+++ b/templates/street.ejs
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<meta charset='utf-8'/>
-		<title></title>
+		<title><%= street.name %> &middot; madeincluj</title>
 	</head>
 	<body>
-		<h1></h1>
+		<h1><%= street.name %></h1>
+		<p><%= street.description ? street.descriptin.ro : '' %></p>
 	</body>
 </html>
